{{$NEXT}}

- Decoding of unsigned integers has been simplified. Math::BigInt will now
  only be used for integers that are actually too big to store as native
  integers.


1.000010 2016-02-01

- Fixed a bug that prevented the pure Perl implementation from correctly
  detecting expanded IPv6 addresses.


1.000009 2015-12-17

- Removed test dependency on Net::Works, which in turn depends on
  Math::Int128. Hopefully this finally removes XS from the module's dependency
  chain.


1.000008 2015-12-15

- Require Path::Class 0.27 for tests. This is the first version to include
  tempdir.

- Really remove dependency on Math::Int128. There was still some test code
  using it that caused it to be required. Reported by Victor Efimov. GH #23.

- Removed MaxMind::DB::Verifier and the mmdb-verify-database script. This was
  extremely slow on large databases, and probably fairly buggy. Use
  https://github.com/maxmind/mmdbverify instead.


1.000007 2015-05-27

- Require version 1.87 of Socket (same as perl 5.12) to minimize XS dependency.
  On Windows, Socket version 2.019 will be installed (for inet_pton emulation).


1.000006 2015-05-22

- Require Scalar::Util 1.42 for tests,  GH #16


1.000005 2015-05-22

- Require newer version of Socket for inet_pton on perl 5.10


1.000004 2015-04-30

- MaxMind::DB::Reader now has no XS dependencies. Previously Net::Works was
  used for validation and Math::Int128 was used to return larger
  integers. Integers larger than maximum unsigned integer supported by your
  perl will now be returned as Math::BigInt objects. If you are dealing with
  many lookups of a record with such values and cannot install
  MaxMind::DB::Reader::XS, you may wish to install Math::BigInt::GMP.

- Fixed a bug in the mmdb-dump-database script. It tried to call methods on
  the JSON module when it meant to use JSON::PP.

- mmdb-dump-database was moved from bin to eg.


1.000003 2014-12-17

- The previous release somehow included junk from an even older release in a