@@ -1,13 +1,13 @@
 requires "Carp" => "0";
 requires "Data::IEEE754" => "0";
 requires "Data::Printer" => "0";
-requires "Data::Validate::IP" => "0.16";
+requires "Data::Validate::IP" => "0.25";
 requires "DateTime" => "0";
 requires "Encode" => "0";
 requires "Getopt::Long" => "0";
 requires "List::AllUtils" => "0";
 requires "Math::BigInt" => "0";
-requires "MaxMind::DB::Common" => "0.040000";
+requires "MaxMind::DB::Common" => "0.040001";
 requires "MaxMind::DB::Metadata" => "0";
 requires "MaxMind::DB::Role::Debugs" => "0";
 requires "MaxMind::DB::Types" => "0";
